--- a/package.json
+++ b/package.json
@@ -1,12 +1,58 @@
 {
   "name": "@jrmc/adonis-lucid-commands",
   "version": "0.0.1",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "adonisjs",
+    "lucid",
+    "orm",
+    "ace",
+    "commands"
+  ],
+  "author": "Jeremy Chaufourier jeremy@chaufourier.fr",
   "license": "MIT",
-  "description": ""
+  "description": "Additional commands for AdonisJS Lucid ORM",
+  "type": "module",
+  "main": "build/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/batosai/adonis-lucid-commands.git"
+  },
+  "files": [
+    "build"
+  ],
+  "scripts": {
+    "typecheck": "tsc --noEmit",
+    "build": "npm run clean && tsc",
+    "prepublishOnly": "npm run build",
+    "clean": "del-cli build",
+    "format": "prettier --write ."
+  },
+  "exports": {
+    ".": "./build/index.js",
+    "./commands": "./build/commands/main.js",
+    "./commands/*": "./build/commands/*.js"
+  },
+  "devDependencies": {
+    "@adonisjs/assembler": "^7.8.2",
+    "@adonisjs/core": "^6.19.0",
+    "@adonisjs/lucid": "^21.7.0",
+    "@adonisjs/prettier-config": "^1.4.5",
+    "@adonisjs/tsconfig": "^1.4.1",
+    "@types/node": "^24.0.11",
+    "del-cli": "^6.0.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "@adonisjs/core": "^6.12.1",
+    "@adonisjs/lucid": "^20.6.0 || ^21.0.0"
+  },
+  "prettier": "@adonisjs/prettier-config",
+  "publishConfig": {
+    "access": "public",
+    "tag": "beta"
+  },
+  "volta": {
+    "node": "22.17.0"
+  }
 }
