chore: update version to 1.0.0-beta.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jrmc/adonis-lucid-commands",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.0",
   "keywords": [
     "adonisjs",
     "lucid",
