--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jrmc/adonis-lucid-commands",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0",
   "keywords": [
     "adonisjs",
     "lucid",
